Fixing layout problem by setting min-hight to header 2

--- a/src/client/sass/base/_base.scss
+++ b/src/client/sass/base/_base.scss
@@ -15,7 +15,6 @@ body {
     box-sizing: border-box;
     font-family: 'Lato', Arial, Helvetica, sans-serif;
     overflow-x: hidden;
-    position: relative;
 }
 
 
