--- a/src/client/sass/components/header.scss
+++ b/src/client/sass/components/header.scss
@@ -7,7 +7,7 @@
     "hero-text hero-image"
     "form hero-image";
     grid-row-gap: 10px;
-
+    min-height: 400px;
     &__hero-text {
         margin-top: auto;
         margin-bottom: auto;
